--- a/form-validation/css/style.css
+++ b/form-validation/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --error-color: #dc3545;
+    --success-color: #28a745;
+    --warning-color: #ffc107;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -31,4 +37,17 @@ button {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.item.error input {
+    border-color: var(--error-color);
+}
+
+.item.success input {
+    border-color: var(--success-color);
+}
+
+
+.item small {
+    color: var(--error-color);
 }
